force-app/main/default/objects/Portal_Access__c/Portal_Access__c.object-meta.xml
<CustomObject>
    <label>Portal Access</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Portal Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>