force-app/main/default/objects/Portal_Access__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portal Access</relationshipLabel>
    <relationshipName>Portal_Access</relationshipName>
    <type>Lookup</type>
</CustomField>