force-app/main/default/objects/Portal_Access__c/fields/Affiliate_Name__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Name__c</fullName>
    <inlineHelpText>This is the partner that created the Portal Access account, if blank it was created by Prosci directly</inlineHelpText>
    <label>Affiliate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>