force-app/main/default/objects/Portal_Access__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portal Access</relationshipLabel>
    <relationshipName>Portal_Access</relationshipName>
    <type>Lookup</type>
</CustomField>