force-app/main/default/objects/Portal_Access__c/fields/customer_type_id__c.field-meta.xml
<CustomField>
    <fullName>customer_type_id__c</fullName>
    <inlineHelpText>1 - Direct
2 - License Admin
3 - License User
4 - Enterprise Program Participant</inlineHelpText>
    <label>Customer Type ID</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>