force-app/main/default/objects/Portal_Access__c/fields/Data_Transfer_Consent__c.field-meta.xml
<CustomField>
    <fullName>Data_Transfer_Consent__c</fullName>
    <label>Data Transfer Consent</label>
    <type>TextArea</type>
</CustomField>