force-app/main/default/objects/Portal_Access__c/fields/Direct_Market__c.field-meta.xml
<CustomField>
    <fullName>Direct_Market__c</fullName>
    <label>Direct Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>BRASIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>