force-app/main/default/objects/Portal_Access__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <formula>SUBSTITUTE( Email__c , LEFT( Email__c , FIND(&quot;@&quot;,  Email__c )), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>