force-app/main/default/objects/Portal_Access__c/fields/Has_perpetual_legacy_License__c.field-meta.xml
<CustomField>
    <fullName>Has_perpetual_legacy_License__c</fullName>
    <label>Has perpetual legacy License</label>
    <length>50</length>
    <type>Text</type>
</CustomField>