force-app/main/default/objects/Portal_Access__c/fields/magento_ca_id__c.field-meta.xml
<CustomField>
    <fullName>magento_ca_id__c</fullName>
    <label>Magento CA ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>