force-app/main/default/objects/Portal_Access__c/fields/Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>for Database sync</description>
    <label>Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>