force-app/main/default/objects/Portal_Access__c/fields/Portal_Access_Profile_create_date__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access_Profile_create_date__c</fullName>
    <inlineHelpText>This is the date from the portal that the account was created</inlineHelpText>
    <label>Portal Access Profile create date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>