force-app/main/default/objects/Portal_Access__c/fields/Portal_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Portal_Certification_Date__c</fullName>
    <label>Portal Certification Date</label>
    <type>Date</type>
</CustomField>