force-app/main/default/objects/Portal_Access__c/fields/Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_ID__c</fullName>
    <label>Portal ID</label>
    <type>AutoNumber</type>
</CustomField>