force-app/main/default/objects/Portal_Access__c/fields/Portal_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Portal_Phone_Number__c</fullName>
    <label>Portal Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>