force-app/main/default/objects/Portal_Access__c/fields/Price_Tier__c.field-meta.xml
<CustomField>
    <fullName>Price_Tier__c</fullName>
    <label>Price Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>