force-app/main/default/objects/Portal_Access__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>How did the record get created.</inlineHelpText>
    <label>Source</label>
    <type>TextArea</type>
</CustomField>