force-app/main/default/objects/Portal_Access__c/fields/Unique_Email__c.field-meta.xml
<CustomField>
    <fullName>Unique_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>