force-app/main/default/objects/Portal_Access__c/fields/Verify__c.field-meta.xml
<CustomField>
    <fullName>Verify__c</fullName>
    <label>Verify</label>
    <type>TextArea</type>
</CustomField>