force-app/main/default/objects/Portal_Access__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Email__c</columns>
    <columns>prosci_portal_db_id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email__c</field>
        <operation>equals</operation>
        <value>syreeta.n.mcfadden@gmail.com</value>
    </filters>
    <label>All</label>
</ListView>